<resources>

    <string name="app_name">Yamba</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_status">Update your status</string>
    <string name="update">Update!</string>
    <string name="status_hint">What\'s happening?!?</string>
    <string name="username">Username</string>
    <string name="username_summary">Who do you login as?</string>
    <string name="password">Password</string>
    <string name="password_summary">What is your password?</string>
    <string name="title_preferences">Preferences</string>
    <string name="login">Login Info</string>
    <string name="server">Server API?</string>
    <string name="server_summary">Where is the service hosted?</string>
    <string name="refresh_interval">Refresh Interval</string>
    <string name="refresh_interval_summary">How frequently would you like to refresh data?</string>
    <string name="status">Status</string>
    <string name="prefs">Prefs</string>
    <string name="refresh">Refresh</string>
    <string name="purge">Purge</string>

</resources>